--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    font-family: 'Montserrat', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+    list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img{
+    display: block;
 }
 
-.App-link {
-  color: #61dafb;
+a{
+    text-decoration: none;
+    color: #444;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+    display: block;
+    width: 100%;
+    font-size: 1rem;
+    font-family: inherit;
+    border-radius: 3px;
+}
+
+input:focus{
+    outline-color: #5780d9;
+}
+
+textarea{ 
+    display: block;
+    width: 100%;
+    font-size: 1rem;
+    font-family: inherit;
+    border-radius: 3px;
+}
+
+textarea:focus{
+    outline-color: #5780d9;
+}
+
+button {
+    font-family: inherit;
+    font-weight: 700;
+    border-radius: 3px;
+    cursor: pointer;
 }
